Geometry nodes. Recalculation during object transform #95265

Closed
opened 2022-01-27 19:50:17 +01:00 by Vyacheslav Kobozev · 10 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: 2bf519d211

Short description of error
Looks like GN recalculates each time, when I move the object.
Reminds me #73199 (Editing an object that is referenced in a disabled modifier (of another object) forces the other modifiers on the same stack to update)

slow GN transform.blend

2022-01-27_21-21-59.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: `2bf519d211` **Short description of error** Looks like GN recalculates each time, when I move the object. Reminds me #73199 (Editing an object that is referenced in a disabled modifier (of another object) forces the other modifiers on the same stack to update) [slow GN transform.blend](https://archive.blender.org/developer/F12828297/slow_GN_transform.blend) [2022-01-27_21-21-59.mp4](https://archive.blender.org/developer/F12828299/2022-01-27_21-21-59.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

This is true for many modifiers (having a depsgraph relation to their own transform).
And in many cases this is needed (you could have stuff depend on own [and/or other] transforms in you nodetree).

So same as many other modifiers, this relation is added (unconditionally).

static void updateDepsgraph(ModifierData *md, const ModifierUpdateDepsgraphContext *ctx)
{
  NodesModifierData *nmd = reinterpret_cast<NodesModifierData *>(md);
  DEG_add_modifier_to_transform_relation(ctx->node, "Nodes Modifier");

Now there are simple cases where the conditions for this relation could be improved upon and cases where the relation is not needed could be found (for example the case where a lattice still calculates even if a lattice is not assigned ;) in #95198).
For geometry nodes, I guess a much more complicated granularity would be needed (scanning the nodetree for particular nodes that might depend on transforms)
This could be done, not sure what the #geometry_nodes team has up its sleeves?

This is true for many modifiers (having a depsgraph relation to their own transform). And in many cases this is needed (you could have stuff depend on own [and/or other] transforms in you nodetree). So same as many other modifiers, this relation is added (unconditionally). ``` static void updateDepsgraph(ModifierData *md, const ModifierUpdateDepsgraphContext *ctx) { NodesModifierData *nmd = reinterpret_cast<NodesModifierData *>(md); DEG_add_modifier_to_transform_relation(ctx->node, "Nodes Modifier"); ``` Now there are simple cases where the conditions for this relation could be improved upon and cases where the relation is not needed could be found (for example the case where a lattice still calculates even if a lattice is not assigned ;) in #95198). For geometry nodes, I guess a much more complicated granularity would be needed (scanning the nodetree for particular nodes that might depend on transforms) This could be done, not sure what the #geometry_nodes team has up its sleeves?
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Since we already scan the node tree for a scene time node for the time relation, I think it should be possible to scan for nodes that depend on the global position of the object. Those are, AFAIK:

  • Object info (in "Relative" mode only)
  • Collection info (in "Relative mode only?)

I actually think that's it, that's not so bad!

Since we already scan the node tree for a scene time node for the time relation, I think it should be possible to scan for nodes that depend on the global position of the object. Those are, AFAIK: - Object info (in "Relative" mode only) - Collection info (in "Relative mode only?) I actually think that's it, that's not so bad!
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Yes, that seems reasonable.

Yes, that seems reasonable.
Hans Goudey self-assigned this 2022-01-31 23:25:44 +01:00

This issue was referenced by c9b578eac8

This issue was referenced by c9b578eac8a3c0e246e9679e2333a1788d5c4031
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95265
No description provided.